# cse

./: .gitignore  AbstractKeyProvider.h  AbstractTest.h  BsonDecryptor.cpp  BsonDecryptor.h  CMakeLists.txt  CollectionService.cpp  CollectionService.h  CommandTransformer.cpp  CommandTransformer.h  CursorView.cpp  CursorView.h  DummyKeyProvider.cpp  DummyKeyProvider.h  EncryptionProfile.h  EncryptionService_v1.h  KeyPolicy.cpp  KeyPolicy.h  MongoDriverSubset.h  PropertyMetadataStorage.cpp  PropertyMetadataStorage.h  SchemaValidatorTransformer.cpp  SchemaValidatorTransformer.h  StatementTransformer.cpp  StatementTransformer.h  TodoError.cpp  TodoError.h  VariantJsonValue.h  bson_util.cpp  bson_util.h  concepts.h  cse_service.cpp  main.cpp  util.cpp  util.h
benchmark_generate/: benchmark_db_encrypted_key_policy.json  benchmark_db_encrypted_validator.json  benchmark_db_plain_validator.json  generate_db_encrypted.cpp  generate_db_plain.cpp
benchmark_generate/output/: benchmark_db_encrypted_property_meta.json  benchmark_db_encrypted_validator_transformed.json
benchmark_run/: benchmark_run_encrypted.cpp  benchmark_run_plain.cpp  run.cpp
dummy/context/testdb/testcol/: aes192_ctr  aes256_ctr  ope_32_64
ope/: CryptDB_LICENSE.txt  aes.hh  bn.hh  cmc.hh  errstream.hh  hgd.cc  hgd.hh  hmac.hh  main.cpp  ope.cc  ope.hh  prng.cc  prng.hh  sha.hh  zz.cc  zz.hh
test/: test_1.cpp  test_and_or_nor_operator.cpp  test_deletion.cpp  test_dotpath.cpp  test_dotpath_array.cpp  test_elemMatch_operator_array.cpp  test_eq_implicit.cpp  test_eq_operator.cpp  test_find_predicates_util.h  test_in_operator.cpp  test_in_operator_array.cpp  test_nested_arrays.cpp  test_nested_documents.cpp  test_not_operator.cpp  test_ope_gt.cpp  test_ope_gte.cpp  test_ope_lt.cpp  test_ope_simple.cpp  test_range_predicates.cpp  test_range_predicates_util.h  test_set_operator.cpp  test_set_operator_dotpath.cpp
test/data/find_predicates/: find_predicates_key_policy.json  find_predicates_validator.json
test/data/find_predicates/deletion/: deletion_delete_one_cmd.json
test/data/find_predicates/dotpath/: dotpath_insert.json
test/data/find_predicates/dotpath_array/: dotpath_array_find.json  dotpath_array_insert.json
test/data/find_predicates/elemMatch_operator_array/: elemMatch_operator_array_find.json
test/data/find_predicates/eq_implicit/: eq_implicit_insert.json
test/data/find_predicates/in_operator/: in_operator_insert.json
test/data/find_predicates/in_operator_array/: in_operator_array_insert.json
test/data/find_predicates/not_operator/: not_operator_find.json
test/data/find_predicates/output/: find_predicates_property_meta.json
test/data/find_predicates/set_operator_dotpath/: set_operator_dotpath_update_plain.json
test/data/nested_arrays/: insert1.json
test/data/nested_arrays/output/: nested_arrays_property_meta.json  nested_arrays_validator_transformed.json
test/data/nested_documents/output/: nested_documents_validator_transformed.json
test/data/ope_simple/: ope_simple_validator.json
test/data/range_predicates/: range_predicates_and_or_nor.json  range_predicates_find_lt.json  range_predicates_find_overflow.json
test/data/range_predicates/output/: range_predicates_property_meta.json
test_v2/: CollectionServiceTest.cpp  CollectionServiceTest.h
test_v2/data/find_predicates/: find_predicates_key_policy.json  set_operator_insert_cmd.json
test_v2/data/find_predicates/and_or_nor_operator/: and_or_nor_operator_find.json
test_v2/data/find_predicates/dotpath/: dotpath_find.json
test_v2/data/find_predicates/eq_operator/: eq_operator_find.json  eq_operator_insert.json
test_v2/data/find_predicates/in_operator/: in_operator_find.json
test_v2/data/find_predicates/in_operator_array/: in_operator_array_find.json
test_v2/data/find_predicates/output/: find_predicates_property_meta.json  find_predicates_validator_transformed.json
test_v2/data/find_predicates/set_operator/: set_operator_update.json
test_v2/data/nested_documents/: insert1.json  nested_documents_validator.json
test_v2/data/nested_documents/output/: nested_documents_property_meta.json
test_v2/data/ope_simple/output/: ope_simple_validator_transformed.json
test_v2/data/range_predicates/: range_predicates_find_gt.json  range_predicates_find_lte.json  range_predicates_validator.json
test_v2/data/range_predicates/output/: range_predicates_validator_transformed.json
test_v2/tests/: test_and_or_nor_operator.cpp
test_v3/: CollectionServiceTest.h  doctest_main.cpp  test_and_or_nor_operator.cpp  test_dotpath.cpp  test_dotpath_array.cpp  test_elemMatch_operator_array.cpp  test_eq_operator.cpp  test_in_operator.cpp  test_in_operator_array.cpp  test_nested_arrays.cpp  test_nested_documents.cpp  test_not_operator.cpp  test_ope_gt.cpp  test_ope_lt.cpp  test_range_predicates.cpp  test_set_operator.cpp  test_set_operator_dotpath.cpp
test_v3/data/find_predicates/: find_predicates_key_policy.json  find_predicates_validator_ext.json
test_v3/data/find_predicates/deletion/: deletion_delete_many_cmd.json
test_v3/data/find_predicates/elemMatch_operator_array/: elemMatch_operator_array_insert.json
test_v3/data/find_predicates/eq_implicit/: eq_implicit_find.json
test_v3/data/nested_arrays/: nested_arrays_validator.json
test_v3/data/nested_documents/: insert1.json  nested_documents_validator.json
test_v3/data/ope_simple/: insert1.json
test_v3/data/range_predicates/: range_predicates_find_gte.json  range_predicates_insert.json  range_predicates_insert_overflow.json  range_predicates_validator.json
v2/: BsonDecryptorV2.cpp  BsonDecryptorV2.h  EncryptionService_v2.cpp  EncryptionService_v2.h  SchemaValidatorTransformerV2.cpp  SchemaValidatorTransformerV2.h  StatementTransformerV2.cpp  StatementTransformerV2.h
v3/: BsonDecryptorV3.cpp  BsonDecryptorV3.h  CollectionServiceV3.cpp  CollectionServiceV3.h  EncryptionServiceV3.cpp  EncryptionServiceV3.h  SchemaValidatorTransformerV3.cpp  SchemaValidatorTransformerV3.h  StatementTransformerV3.cpp  StatementTransformerV3.h
(+6 files in other folders)
